# trading-bot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Binance-Bot-Trading.bat  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyrightconfig.json  requirements.txt  starter.py
Languages/C++/: CMakeLists.txt  README.md  resources.qrc
Languages/C++/Crypto-Exchanges/Binance/: CMakeLists.txt  README.md  resources.qrc
Languages/C++/src/: BacktestWindow.cpp  BacktestWindow.h  BinanceRestClient.cpp  BinanceRestClient.h  BinanceWsClient.cpp  BinanceWsClient.h  TradingBotWindow.account.cpp  TradingBotWindow.backtest.cpp  TradingBotWindow.chart.cpp  TradingBotWindow.cpp  TradingBotWindow.dashboard.cpp  TradingBotWindow.dashboard_indicator_dialog.cpp  TradingBotWindow.dashboard_overrides.cpp  TradingBotWindow.dashboard_runtime.cpp  TradingBotWindow.dashboard_runtime_internal.cpp  TradingBotWindow.dashboard_runtime_internal.h  TradingBotWindow.dashboard_runtime_lifecycle.cpp  TradingBotWindow.dashboard_runtime_shared.cpp  TradingBotWindow.dashboard_runtime_shared.h  TradingBotWindow.dashboard_ui.cpp  TradingBotWindow.h  TradingBotWindow.positions.cpp  TradingBotWindowSupport.cpp  main.cpp
Languages/C++/tools/: install_cpp_dependencies.ps1  install_cpp_dependencies.sh
Languages/Python/: README.md  Trading-Bot-Python.bat  hold.py  main.py  pyproject.toml  requirements.backend.txt  requirements.txt  requirements.windows-arm64.txt  starter.py
Languages/Python/Binance/: dump_snippet.py
Languages/Python/Binance/app/: close_all.py  config.py
Languages/Python/Binance/tools/: configure_margin.py
Languages/Python/Crypto-Exchanges/Binance/: LAUNCHERS_README.txt  README.md  build_exe.ps1  main.py  requirements.txt  starter.py  windows_taskbar.py
Languages/Python/Crypto-Exchanges/Bitget/: build_exe.ps1  main.py
Languages/Python/Crypto-Exchanges/Bybit/: build_exe.ps1  main.py  starter.py
Languages/Python/Crypto-Exchanges/Gate/: Binance-Bot-Trading.bat  build_exe.ps1  main.py  starter.py
Languages/Python/Crypto-Exchanges/KuCoin/: build_exe.ps1  main.py  starter.py
Languages/Python/Crypto-Exchanges/MEXC/: build_exe.ps1  main.py
Languages/Python/Crypto-Exchanges/OKX/: build_exe.ps1  main.py  starter.py
Languages/Python/app/: __init__.py  backtester.py  binance_account_data.py  binance_futures_positions.py  binance_http_runtime.py  binance_market_data.py  binance_order_fallback_runtime.py  binance_rate_limit_runtime.py  binance_sdk_clients.py  binance_wrapper.py  binance_ws_runtime.py  close_all.py  config.py  entrypoint_contract.py  indicators.py  jsonl_rotation.py  native_parity.py  position_guard.py  preamble.py  strategy.py  strategy_cycle_runtime.py  strategy_indicator_compute.py  strategy_indicator_guard.py  strategy_indicator_tracking.py  strategy_position_close_runtime.py  strategy_position_flip_runtime.py  strategy_position_state.py  strategy_runtime.py  strategy_runtime_support.py  strategy_signal_generation.py  strategy_signal_order_collect_runtime.py  strategy_signal_order_execute_runtime.py  strategy_signal_order_guard_runtime.py  strategy_signal_order_margin_runtime.py  strategy_signal_order_position_gate_runtime.py  strategy_signal_order_prepare_runtime.py  strategy_signal_order_result_runtime.py  strategy_signal_order_sizing_runtime.py  strategy_signal_order_slot_runtime.py  strategy_signal_order_submit_runtime.py  (+3 more)
Languages/Python/app/bootstrap/: runtime_env.py  startup_app_runtime.py  startup_cover_runtime.py  startup_icon_runtime.py  startup_lifecycle_runtime.py  startup_post_window_runtime.py  startup_pre_qt_window_suppression_runtime.py  startup_presentation_runtime.py  startup_splash_ui.py  startup_ui.py  startup_ui_shared.py  startup_window_suppression_cbt_api_runtime.py  startup_window_suppression_cbt_cleanup_runtime.py  startup_window_suppression_cbt_cover_runtime.py  startup_window_suppression_cbt_install_runtime.py  startup_window_suppression_cbt_runtime.py  (+12 more)
Languages/Python/tests/: test_active_history_reconciliation.py  test_backtest_behavior.py  test_backtest_checkpoint_store.py  test_backtest_dashboard_bridge_runtime.py  test_backtest_interval_alias_stability.py  test_backtest_market_layout_runtime.py  test_backtest_optimizer_runtime.py  test_backtest_request_behavior.py  test_backtest_service_execution_runtime.py  test_backtest_service_payload_runtime.py  test_backtest_snapshot_store.py  test_balance_runtime_exception_logging.py  test_binance_close_all_ghost_positions.py  test_binance_futures_account_safety.py  test_binance_futures_position_query_safety.py  test_binance_futures_settings_safety.py  test_binance_package_split_smoke.py  test_binance_position_close_safety.py  test_binance_ws_runtime.py  test_chart_interval_alias_stability.py  test_close_history_reconciliation.py  test_code_language_cpp_bundle_smoke.py  test_code_language_cpp_launch_runtime.py  test_code_language_launch_exception_logging.py  test_credential_store.py  test_cumulative_view_stability.py  test_dependency_reproducibility.py  test_dependency_update_progress.py  test_dependency_versions_requirements.py  test_desktop_product_main.py  test_desktop_service_bridge_smoke.py  test_entrypoint_contract.py  test_exchange_support_capabilities.py  test_fake_exchange_integration.py  test_gui_composition_registry.py  test_gui_config_persistence.py  test_gui_runtime_package_split_smoke.py  test_hardening_articles.py  test_history_metadata_stability.py  test_indicator_interval_alias_stability.py  (+69 more)
Languages/Python/tools/: LAUNCHERS_README.txt  README.md  build_binary.sh  build_exe.ps1  check_dependency_metadata.py  check_service_api_contracts.py  configure_margin.py  generate_native_parity_contracts.py  hold.py  import_policy.py  lot_cli_demo.py  manual_smoke.py  run_python_tests.py  run_service_tests.py  scan_backtest_2025.py  service_test_manifest.py
Languages/Python/trading_core/: __init__.py  backtest.py  indicators.py  orders.py  positions.py  strategy.py
experiments/rust-shells/: Cargo.toml  README.md
experiments/rust-shells/src/: main.rs
(+905 files in other folders)
