[package]
name = "trading-bot-rust"
version = "0.1.0"
edition = "2024"
license = "0BSD"
publish = false

[workspace]
resolver = "2"
members = [
    ".",
    "crates/contracts",
    "crates/core",
    "apps/tauri-desktop",
]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "native-tls"] }
sha2 = "0.10"
tungstenite = { version = "0.27", features = ["native-tls"] }
tauri = { version = "2" }
tauri-build = { version = "2" }

[dependencies]
serde_json = { workspace = true }
trading-bot-core = { path = "crates/core" }
