[package]
name = "trading-bot-rust"
version = "0.1.0"
edition = "2024"
license = "0BSD"
publish = false

[workspace]
resolver = "2"
members = [
    ".",
    "crates/contracts",
    "crates/core",
    "apps/tauri-desktop",
]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
sha2 = "0.10"
tungstenite = { version = "0.30", features = ["native-tls"] }
tauri = { version = "2" }
tauri-build = { version = "2" }

# plist 1.8.0 pins vulnerable quick-xml 0.38.x on the macOS Tauri path. The
# upstream project has the compatible quick-xml 0.41.0 remediation on this
# reviewed commit but has not published it to crates.io yet.
[patch.crates-io]
plist = { git = "https://github.com/ebarnard/rust-plist", rev = "2881e175b61f159a8a958765168733c0d5abe641" }

[dependencies]
serde_json = { workspace = true }
trading-bot-core = { path = "crates/core" }
